# data_collection

./: .gitignore  CAMERA_INTEGRATION_SUMMARY.md  CAMERA_USAGE.md  CMakeLists.txt  README.md
config/: example_config.yaml
include/: basketball_detector.hpp  camera_factory.hpp  camera_interface.hpp  common.hpp  hik_camera_adapter.hpp  solver.hpp  zed_camera_adapter.hpp
scripts/: basketball_tracker_bgsub.py  basketball_tracker_demo.py  batch_extract_frames.py  test_camera_selection.sh
src/: basketball_detector.cpp  camera_factory.cpp  hik_camera_adapter.cpp  main.cpp  solver_camera_interface.cpp  utils.cpp  zed_camera_adapter.cpp
src/zed_camera/: main.cpp  test_recording.sh  zed_camera.cpp  zed_camera.h
